[package]
name = "saito-rust"
version = "0.1.0"
authors = ["BearGuy <stephen@peterkins.ca>"]
edition = "2018"

[lib]
name = "saito"
path = "src/lib.rs"

[[bin]]
name = "saito-bin"
path = "src/main.rs"

[dependencies]
bincode = "1.1.4"
sha2 = "0.8"
digest = '0.8'
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
secp256k1 = { version = '0.12.2', features = ["rand", "serde"] }
base58 = '0.1.0'
merkle = '1.10.0'
ring = "^0.13.0"
byteorder = '1.3.1'

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "saito_benchmark"
harness = false
